--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,9 @@ pydantic_core==2.27.1
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-louvain==0.16
 pytz==2024.2
+scipy==1.14.1
 six==1.17.0
 sniffio==1.3.1
 tqdm==4.67.1
