--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
 jiter==0.8.0
+joblib==1.4.2
 kiwisolver==1.4.7
 matplotlib==3.9.3
 networkx==3.4.2
@@ -26,9 +27,11 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-louvain==0.16
 pytz==2024.2
+scikit-learn==1.6.0
 scipy==1.14.1
 six==1.17.0
 sniffio==1.3.1
+threadpoolctl==3.5.0
 tqdm==4.67.1
 typing_extensions==4.12.2
 tzdata==2024.2
